--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
   path = 5-day-weather-forecast
   url = https://github.com/Tristenh/5-day-weather-forecast
   
+  
+# [submodule "work-day-scheduler"]
+#   path = work-day-scheduler
+#   url = https://github.com/Tristenh/work-day-scheduler
+  
