updated gitmodules, added Tristens-Codinh-Quiz and rock-paper-scissors, deleted unwanted projects as they where not added to my porfolio using gitmodules and want to show off newer projects

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,11 @@
   path = work-day-scheduler
   url = https://github.com/Tristenh/work-day-scheduler
   
+[submodule "Tristens-Coding-Quiz"]
+  path = Tristens-Coding-Quiz
+  url = https://github.com/Tristenh/Tristens-Coding-Quiz
+  
+[submodule "rock-paper-scissors"]
+  path = rock-paper-scissors
+  url = https://github.com/Tristenh/rock-paper-scissors
+  
