updated featired apps

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,7 @@
   path = rock-paper-scissors
   url = https://github.com/Tristenh/rock-paper-scissors
   
+[submodule "your-recipe-book"]
+  path = your-recipe-book
+  url = https://github.com/tkdgns0630/your-recipe-book
+  
